# DrawPicture

./: .gitignore  CMakeLists.txt  Resource.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: mainwindow.cpp  mainwindow.h  mainwindow.ui  pickcolorsframe.cpp  pickcolorsframe.h  positionlabel.cpp  positionlabel.h  similarityfiltering.cpp  similarityfiltering.h
